src/snapshots/droid_tui__regression__visual_graph_latency_chain_snapshot@graph_latency_chain_mono_40.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────┐
┌(unnamed)─────────────────────────────┐
│──────────────────────────────────────│
│                   ╭copy──────────────╮
│                   │                  │
│                   ◉              ┌───●
│                   │              │   │
╭clocktool──────────╰──────────────────╯
│                   ││             │   │
│                   └●             │   │
│                    │             │   │
╰────────────────────╯             │   │
│                              ╭mixer──╮
│                              │   │   │
│                              ◉───┘   ●
│                              │       │
│            ╭p2b8────────────────╮────╯
│            │                    │    │
│            │                    │    │
│            │                    │    │
│            ╰────────────────────╯    │
│                                      │
└──────────────────────────────────────┘














┌──────────────────────────────────────┐
│Loaded graph_latency_chain | Renders d│
└──────────────────────────────────────┘
