src/snapshots/droid_tui__regression__visual_graph_latency_chain_snapshot@graph_latency_chain_terminal_100.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                    DROID: graph_latency_chain                                    │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘


┌(unnamed)─────────────────────────────────────────────────────────────────────────────────────────┐
│                                                                                                  │
│                             ╭copy────────────────╮                                               │
│                             │                    │                                               │
│                        ┌────◉                  ┌─●                                               │
│                        │    │                  │ │                                               │
│                        │    ╰────────────────────╯                                               │
│                        │                       │                                                 │
╭clocktool───────────╮   │                       │                                                 │
│                    │   │                       │                                                 │
│                    ●───┘                       │                                                 │
│                    │                           │                            ╭contour─────────────╮
╰────────────────────╯                           │                            │                    │
│                                                │                       ┌────◉                    │
│                                                │                       │    │                    │
│                                                │                       │    ╰────────────────────╯
│                                              ╭mixer───────────────╮    │                         │
│                                              │ │                  │    │                         │
│                                              ◉─┘                  ●────┘                         │
│                                              │                    │                              │
│                                              ╰────────────────────╯                              │
│                                                                                                  │
│                   ╭p2b8────────────────╮                                                         │
│                   │                    │                                                         │
│                   │                    │                                                         │
│                   │                    │                                                         │
│                   ╰────────────────────╯                                                         │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘



┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│Loaded graph_latency_chain | Renders degraded at 100 cols — use ≥ 290 cols or reduce scale | laten│
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
