src/snapshots/droid_tui__regression__visual_graph_latency_chain_snapshot@graph_latency_chain_terminal_160.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                                                  DROID: graph_latency_chain                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Panels ──────────────────────────────────────────────────────────────────────────────────────┐┌ Graph ───────────────────────────────────────────────────────┐
│◉◉┐                                                                                           ││                                                              │
│…0%                                                                                           ││                                                              │
││ │                                                                                           ││                                                              │
││ │                                                                                           ││                                                              │
││ │                                                                                           ││                                                              │
││ │                                                                                           ││                                                              │
││ │                                                                                           ││                                                              │
││ │                                                                                           ┌(unnamed)──────────────────────────────────────────────────────┐
││ │                                                                                           ││                                                              │
││ │                                                                                           ││╭clocktool───────────╮                                        │
│○○│                                                                                           │││            ╭copy────────╭mixer────────╭contour─────────────╮│
│……│                                                                                           │││            │   ┌───●    │       │     │      │             ││
││ │                                                                                           │││            ◉───┘   │    ◉───────●     ◉──────●             ││
││ │                                                                                           ││╰────────────│───────╯    │       │     │      │             ││
│○○│                                                                                           ││             ╰────────────╰─────────────╰────────────────────╯│
│○○│                                                                                           ││                                                              │
││ │                                                                                           ││                                                              │
││ │                                                                                           ││       ╭p2b8────────────────╮                                 │
││ │                                                                                           ││       │                    │                                 │
│○○│                                                                                           ││       │                    │                                 │
│……│                                                                                           ││       │                    │                                 │
││ │                                                                                           ││       ╰────────────────────╯                                 │
││ │                                                                                           ││                                                              │
│○○│                                                                                           └───────────────────────────────────────────────────────────────┘
│○○│                                                                                           ││                                                              │
││ │                                                                                           ││                                                              │
││ │                                                                                           ││                                                              │
││ │                                                                                           ││                                                              │
││ │                                                                                           ││                                                              │
││ │                                                                                           ││                                                              │
││ │                                                                                           ││                                                              │
│└─┘                                                                                           ││                                                              │
└──────────────────────────────────────────────────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Loaded graph_latency_chain | Renders degraded at 160 cols — use ≥ 290 cols or reduce scale | latency avg 0.0 / max 0.0 (1 loop ≈ 190µs) | 0 back edge(s) | Sca│
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
