src/snapshots/droid_tui__regression__visual_graph_latency_chain_snapshot@graph_latency_chain_terminal_40.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────┐
│      DROID: graph_latency_chain      │
└──────────────────────────────────────┘





┌(unnamed)─────────────────────────────┐
│                                      │
│  ╭copy────────────────╮              │
│  │                    │              │
│  ◉────────┐      ┌────●              │
│  │        │      │    │              │
╭cl╰────────────────────╯              │
│           │      │ │                 │
│           └────────●            ╭cont╮
│                  │ │            │    │
╰────────────────────╯            ◉    │
│             ╭mixer──────────────│╮   │
│             │    │              ╰────╯
│             ◉────┘              └●   │
│             │                    │   │
│             ╰────────────────────╯   │
╭p2b8────────────────╮                 │
│                    │                 │
│                    │                 │
│                    │                 │
╰────────────────────╯                 │
│                                      │
└──────────────────────────────────────┘






┌──────────────────────────────────────┐
│Loaded graph_latency_chain | Renders d│
└──────────────────────────────────────┘
