src/snapshots/droid_tui__regression__visual_graph_latency_error_snapshot@graph_latency_error_classic_100.snap
---
source: src/regression.rs
assertion_line: 3385
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│┌(unnamed)──────────────────────────────────────────────────────────────────────────────────────┐ │
└│───────────────────────────────────────────────────────────────────────────────────────────────│─┘
 │                              ╭copy────────────────╮                                           │
 │                              │                    │                                           │
 │                          ┌───◉            ┌───────●                                           │
 │                          │   │            │       │                                           │
 │                          │   ╰────────────────────╯                                           │
 │                          │                │                                                   │
 │                          │                │                                                   │
 │                          │                │                                                   │
 │                          │                │                                                   │
 │                          │                │                                                   │
 │                          │                │                                                   │
 │ ╭clocktool───────────╮   │                │                                                   │
 │ │                    │   │                │                                                   │
 │ │                    ●───┘──┐             │                                                   │
 │ │                    │      │             │                                                   │
 │ ╰────────────────────╯      │             │                            ╭contour─────────────╮ │
 │                             │             │                            │                    │ │
 │                             │      ╭mixer───────────────╮      ┌───────◉                    │ │
 │                             │      │      │             │      │       │                    │ │
 │                             └──────◉──────┘             ●──────┘       ╰────────────────────╯ │
 │                                    │                    │                                     │
 │                                    ╰────────────────────╯                                     │
 │                                                                                               │
 │                                                                                               │
 │                                                                                               │
 │                                                                                               │
 │                                                                                               │
 │                                                                                               │
 │                                                                                               │
 │          ╭p2b8────────────────╮                                                               │
 │          │                    │                                                               │
 │          │                    │                                                               │
 │          │                    │                                                               │
 │          ╰────────────────────╯                                                               │
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│No patch loaded. Press 'l' to load. | Renders degraded at 100 cols — use ≥ 290 cols or reduce scal│
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
