src/snapshots/droid_tui__regression__visual_graph_latency_error_snapshot@graph_latency_error_classic_160.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                                                  DROID: graph_latency_error                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────┌(unnamed)──────────────────────────────────────────────────────┐
┌ Panels ──────────────────────────────────────────────────────────────────────────────────────│┌ Graph ───────────────────────────────────────────────────────│
│◉◉┐                                                                                           ││                     ╭mixer───────────────╮                   │
│…0%                                                                                           ││                     │                    │                   │
││ │                                                                                           ││╭clocktool───────────◉───────┐            ●                   │
││ │                                                                                           │││                    │       │            │                   │
││ │                                                                                           │││                 ┌──╰────────────────────╭contour───────────╮│
││ │                                                                                           │││                 │  │       │            │                  ││
││ │                                                                                           ││╰────────────────────╯       │            ◉                  ││
││ │                                                                                           ││                  │          │            │                  ││
││ │                                                                                           ││                  │          │            ╰──────────────────╯│
││ │                                                                                           ││                  │          │                                │
│○○│                                                                                           ││                ╭copy────────────────╮                        │
│……│                                                                                           ││                │ │          │       │                        │
││ │                                                                                           ││                ◉─┘          └───────●                        │
││ │                                                                                           ││                │                    │                        │
│○○│                                                                                           ││                ╰────────────────────╯                        │
│○○│                                                                                           ││       ╭p2b8────────────────╮                                 │
││ │                                                                                           ││       │                    │                                 │
││ │                                                                                           ││       │                    │                                 │
││ │                                                                                           ││       │                    │                                 │
│○○│                                                                                           ││       ╰────────────────────╯                                 │
│……│                                                                                           ││                                                              │
││ │                                                                                           └───────────────────────────────────────────────────────────────┘
││ │                                                                                           ││                                                              │
│○○│                                                                                           ││                                                              │
│○○│                                                                                           ││                                                              │
││ │                                                                                           ││                                                              │
││ │                                                                                           ││                                                              │
││ │                                                                                           ││                                                              │
││ │                                                                                           ││                                                              │
││ │                                                                                           ││                                                              │
││ │                                                                                           ││                                                              │
│└─┘                                                                                           ││                                                              │
└──────────────────────────────────────────────────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Loaded graph_latency_error | Renders degraded at 160 cols — use ≥ 290 cols or reduce scale | latency avg 0.0 / max 0.0 (1 loop ≈ 190µs) | 0 back edge(s) | Sca│
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
